--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -232,6 +232,7 @@
 "smart-id-country-lithuania" = "Lithuania";
 "smart-id-country-latvia" = "Latvia";
 "smart-id-challenge-title" = "Sign with Smart-ID";
+"smart-id-status-request-select-account" = "Confirm device for signing in Smart-ID application.";
 "smart-id-sign-help-title" = "Make sure control code matches with one in phone screen and enter Smart-ID PIN2 code";
 "nfc-title" = "Enter your ID-card access number (CAN) and PIN2 code to sign with ID-card";
 "nfc-can-title" = "ID-card access number (CAN)";
