--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -373,6 +373,7 @@
 
 "my-eid-change-code-title" = "Изменить %@";
 "my-eid-unblock-code-title" = "Разблокировать %@";
+"my-eid-change-not-available-text" = "Невозможно изменить PUK-код ID-карты, находящейся в считывателе";
 "my-eid-current-code-label" = "ДЕЙСТВУЮЩИЙ %@-КОД";
 "my-eid-new-code-label" = "НОВЫЙ %@-КОД (не меньше %i символов)";
 "my-eid-new-code-again-label" = "ПОВТОРИТЬ НОВЫЙ %@-КОД";
