Check duplicate files in container

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -142,6 +142,7 @@
 "file-import-failed-file-save" = "Failed to save file";
 "file-import-failed-empty-file" = "Cannot add empty file to the container";
 "file-import-failed-empty-file-imported" = "An empty file is attached to the envelope. Remove the empty file from the container to sign.";
+"file-import-failed-duplicate-files" = "Found multiple references of file '%@' in container";
 
 // Details
 "container-details-signing-success" = "SIGNATURE ADDED";
