--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -143,6 +143,7 @@
 "file-import-failed-file-save" = "Faili salvestamine ebaõnnestus";
 "file-import-failed-empty-file" = "Tühja faili ei saa ümbrikusse lisada";
 "file-import-failed-empty-file-imported" = "Ümbrikule on lisatud tühi fail. Allkirjastamiseks eemalda ümbrikust tühi fail.";
+"file-import-failed-duplicate-files" = "Konteineris leiti faili '%@' mitu viidet";
 
 // Details
 "container-details-signing-success" = "ALLKIRI LISATUD";
