--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -250,6 +250,7 @@
 "nfc-sign-done" = "Подпись добавлена";
 "nfc-auth-failed" = "Идентификация личности по карте не удалась";
 "nfc-sign-failed" = "Не удалось подписать контейнер";
+"nfc-sign-failed-wrong-can" = "Неправильный номер CAN";
 "nfc-pin-locked" = "PIN2 заблокирован";
 "nfc-cert-parse-failed" = "Ошибка при анализе сертификата";
 "nfc-cert-expired" = "Сертификат с истекшим сроком действия не может быть использован для подписи";
