--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -255,8 +255,6 @@
 "nfc-pin-locked" = "PIN2 on blokeeritud";
 "nfc-cert-parse-failed" = "Viga sertifikaadi parsimisel";
 "nfc-cert-expired" = "Aegunud sertifikaati ei saa kasutada allkirjastamiseks";
-"nfc-wrong-pin2" = "Vale PIN2. Katseid jäänud: %d";
-"nfc-wrong-pin1" = "Vale PIN1. Katseid jäänud: %d";
 "nfc-can-info" = "NFC allkirjastamisel kasutatakse CAN numbrit. Mitmekordsel CANi valesti sisestamisel võib NFC lukustuda. https://www.id.ee/artikkel/digiallkirjastamine-ria-digidoc-mobiilirakenduses/";
 "role-and-address" = "Roll ja aadress";
 "role-and-address-title" = "Sisesta oma roll ja aadress";
@@ -292,12 +290,18 @@
 "signing-in-progress" = "Toimub allkirjastamine.\nPalun oota.";
 "decryption-in-progress" = "Toimub dekrüpteerimine.\nPalun oota.";
 "wrong-pin2" = "Vale PIN2. Saad PIN2-koodi sisestada veel %d korda.";
-"wrong-pin1" = "Vale PIN1. Saad PIN1-koodi sisestada veel %1$d korda.";
+"wrong-pin1" = "Vale PIN1. Saad PIN1-koodi sisestada veel %d korda.";
+"wrong-pin2-msg" = "Saad PIN2-koodi sisestada veel %d korda.";
+"wrong-pin1-msg" = "Saad PIN1-koodi sisestada veel %d korda.";
 "wrong-pin2-single" = "Vale PIN2. Järgmise vale sisestusega lukustub PIN.";
 "wrong-pin1-single" = "Vale PIN1. Järgmise vale sisestusega lukustub PIN.";
+"wrong-pin2-single-msg" = "Järgmise vale sisestusega lukustub PIN.";
+"wrong-pin1-single-msg" = "Järgmise vale sisestusega lukustub PIN.";
 "card-reader-state-initial" = "Ühenda kaardilugeja nutiseadmega ja sisesta ID-kaart lugejasse.";
 "pin2-textfield-label" = "Sisesta PIN2";
 "pin1-textfield-label" = "Sisesta PIN1";
+"pin2-locked-alert" = "Selle ID-kaardiga allkirjastamine ei ole veel võimalik. Allkirjastamiseks tuleb PIN2-koodi muuta. https://www.id.ee/artikkel/id-kaardi-pin-ja-puk-koodide-muutmine/";
+"pin-blocked-alert" = "PIN on blokeeritud. Tühista blokeering, et PIN-i taas kasutada. https://www.id.ee/artikkel/id-kaardi-pin-ja-puk-koodide-muutmine/";
 "pin2-blocked-alert" = "PIN2 on blokeeritud";
 "pin1-blocked-alert" = "PIN1 on blokeeritud";
 "generic-error-message" = "Midagi läks valesti. Palun proovi uuesti.";
@@ -346,7 +350,7 @@
 "my-eid-info-pin1-unblock-cancelled" = "Pin1 lahti blokeerimine katkestatud";
 "my-eid-info-pin2-unblock-cancelled" = "Pin2 lahti blokeerimine katkestatud";
 "my-eid-info-puk-change-cancelled" = "PUK-koodi muutmine katkestatud";
-"my-eid-info-puk-cert-info-text" = "PUK-koodi leiad enda koodiümbrikust";
+"my-eid-info-puk-cert-info-text" = "PUK-kood on ID-kaardi koodiümbrikus.";
 "my-eid-info-pin-puk-segment-title" = "PIN-/PUK-KOODID JA SERTIFIKAATIDE KONTROLL";
 "my-eid-info-pin1-blocked-message" = "PIN1 on blokeeritud, kuna PIN1-koodi on sisestatud 3 korda valesti. Tühista blokeering, et PIN1 taas kasutada.";
 "my-eid-info-pin2-blocked-message" = "PIN2 on blokeeritud, kuna PIN2-koodi on sisestatud 3 korda valesti. Tühista blokeering, et PIN2 taas kasutada.";
@@ -354,6 +358,7 @@
 "my-eid-unblock-pin1-button-title" = "TÜHISTA BLOKEERING";
 "my-eid-unblock-pin2-button-title" = "TÜHISTA BLOKEERING";
 "my-eid-how-to-get-codes-message" = "Uue PUK-koodi saamiseks külasta klienditeeninduspunkti, kust saad uue koodiümbriku uute koodidega.";
+"my-eid-how-to-get-codes-url" = "https://www.politsei.ee/et/juhend/id-kaardi-taotlemine-taeiskasvanule/id-kaardi-kasutaja-meelespea";
 "my-eid-code-changed-success-message" = "%@ MUUDETUD";
 "my-eid-code-unblocked-success-message" = "%@ BLOKEERING TÜHISTATUD";
 "my-eid-wrong-code-message" = "Vale %@-kood. Saad veel proovida 2 korda.";
@@ -373,7 +378,8 @@
 
 "my-eid-change-code-title" = "%@-koodi vahetus";
 "my-eid-unblock-code-title" = "%@ lahti blokeerimine";
-"my-eid-change-not-available-text" = "Lugejas oleval ID-kaardil ei saa PUK-koodi muuta";
+"my-eid-change-not-available-text" = "Tuvastatud kaardil ei saa PUK-koodi muuta. Kaotatud koodi saad vaadata Politsei- ja Piirivalveameti iseteenindusest.";
+"my-eid-change-not-available-url" = "https://www.id.ee/artikkel/id-kaardi-pin-ja-puk-koodide-muutmine/";
 "my-eid-current-code-label" = "KEHTIV %@-KOOD";
 "my-eid-new-code-label" = "UUS %@-KOOD (vähemalt %i sümbolit)";
 "my-eid-new-code-again-label" = "UUS %@-KOOD UUESTI";
