--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -255,8 +255,6 @@
 "nfc-pin-locked" = "PIN2 заблокирован";
 "nfc-cert-parse-failed" = "Ошибка при анализе сертификата";
 "nfc-cert-expired" = "Сертификат с истекшим сроком действия не может быть использован для подписи";
-"nfc-wrong-pin2" = "Неверный PIN2-код. Оставшиеся попытки: %d";
-"nfc-wrong-pin1" = "Неверный PIN1-код. Оставшиеся попытки: %d";
 "nfc-can-info" = "При подписании через NFC используется номер CAN. NFC может заблокироваться, если CAN введен неправильно несколько раз. https://www.id.ee/ru/artikkel/czifrovoe-podpisanie-v-mobilnom-prilozhenii-ria-digidoc/";
 "role-and-address" = "Роль и адрес";
 "role-and-address-title" = "Введите свою роль и адрес";
@@ -298,11 +296,17 @@
 "ssl-handshake-error" = "Не удалось создать SSL канал передачи данных. Проверьте настройки вашего приложения или обновления программного обеспечения";
 "ocsp-invalid-time-slot" = "Пожалуйста, проверьте время на своем смарт-устройстве. https://www.id.ee/ru/artikkel/oshibka-ria-digidoc-pozhalujsta-proverte-vremya-na-svoem-smart-ustrojstve/";
 "wrong-pin2" = "Неверный PIN2. У Вас осталось %d попыток.";
-"wrong-pin1" = "Неверный PIN1. У Вас осталось %1$d попыток.";
+"wrong-pin1" = "Неверный PIN1. У Вас осталось %d попыток.";
+"wrong-pin2-msg" = "У Вас осталось %d попыток.";
+"wrong-pin1-msg" = "У Вас осталось %d попыток.";
 "wrong-pin2-single" = "Неверный PIN2. У Вас осталась 1 попытка до блокировки Вашего PIN2.";
 "wrong-pin1-single" = "Неверный PIN1. У Вас осталась 1 попытка до блокировки Вашего PIN1.";
+"wrong-pin2-single-msg" = "У Вас осталась 1 попытка до блокировки Вашего PIN2.";
+"wrong-pin1-single-msg" = "У Вас осталась 1 попытка до блокировки Вашего PIN1.";
 "pin2-textfield-label" = "Введите PIN2";
 "pin1-textfield-label" = "Введите PIN1";
+"pin2-locked-alert" = "Подписание данной ID-картой ещё невозможно. Чтобы подписывать, необходимо изменить PIN2. https://www.id.ee/ru/artikkel/poryadok-izmeneniya-pin-kodov-i-puk-koda-id-karty/";
+"pin-blocked-alert" = "PIN-код заблокирован. Разблокируйте PIN-код, чтобы снова его использовать. https://www.id.ee/ru/artikkel/poryadok-izmeneniya-pin-kodov-i-puk-koda-id-karty/";
 "pin2-blocked-alert" = "PIN2 заблокирован";
 "pin1-blocked-alert" = "PIN1 заблокирован";
 "generic-error-message" = "Что-то пошло не так. Пожалуйста, попробуйте снова.";
@@ -346,7 +350,7 @@
 "my-eid-info-pin1-unblock-cancelled" = "Аннулирование блокировки Pin1 прервано";
 "my-eid-info-pin2-unblock-cancelled" = "Аннулирование блокировки Pin2 прервано";
 "my-eid-info-puk-change-cancelled" = "Изменение PUK-кода прервано";
-"my-eid-info-puk-cert-info-text" = "PUK-код в Вашем конверте кодов";
+"my-eid-info-puk-cert-info-text" = "PUK-код находится в кодовом конверте ID-карты.";
 "my-eid-info-pin-puk-segment-title" = "PIN/PUK И СЕРТИФИКАТЫ";
 "my-eid-info-pin1-blocked-message" = "PIN1 заблокирован, потому что PIN1-код был введён неверно 3 раза. Разблокируйте, чтобы использовать PIN1.";
 "my-eid-info-pin2-blocked-message" = "PIN2 заблокирован, потому что PIN2-код был введён неверно 3 раза. Разблокируйте, чтобы использовать PIN2.";
@@ -354,6 +358,7 @@
 "my-eid-unblock-pin1-button-title" = "РАЗБЛОКИРОВАТЬ";
 "my-eid-unblock-pin2-button-title" = "РАЗБЛОКИРОВАТЬ";
 "my-eid-how-to-get-codes-message" = "Для получения нового PUK-кода для своей ID-карты, посетите центр обслуживания, где вы сможете получить конверт с кодами.";
+"my-eid-how-to-get-codes-url" = "https://www.politsei.ee/ru/instruktsii/hodataystvo-o-vydache-id-karty-vzroslomu/pamyatka-dlya-polzovatelya-id-karti";
 "my-eid-code-changed-success-message" = "%@ ИЗМЕНЕНО";
 "my-eid-code-unblocked-success-message" = "%@ РАЗБЛОКИРОВАН";
 "my-eid-wrong-code-message" = "Неверный %@-код. Вы можете попробовать ещё 2 раз.";
@@ -373,7 +378,8 @@
 
 "my-eid-change-code-title" = "Изменить %@";
 "my-eid-unblock-code-title" = "Разблокировать %@";
-"my-eid-change-not-available-text" = "Невозможно изменить PUK-код ID-карты, находящейся в считывателе";
+"my-eid-change-not-available-text" = "Изменить PUK-код на распознанной карте невозможно. Утерянный код можно посмотреть в самообслуживании Департамента полиции и погранохраны.";
+"my-eid-change-not-available-url" = "https://www.id.ee/ru/artikkel/poryadok-izmeneniya-pin-kodov-i-puk-koda-id-karty/";
 "my-eid-current-code-label" = "ДЕЙСТВУЮЩИЙ %@-КОД";
 "my-eid-new-code-label" = "НОВЫЙ %@-КОД (не меньше %i символов)";
 "my-eid-new-code-again-label" = "ПОВТОРИТЬ НОВЫЙ %@-КОД";
